Fixed Spacing + Links

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -80,6 +80,7 @@ body {
 /* Style for text section */
 .home-text {
     text-align: left;
+    padding-left: 50px;
 }
 
 /* Center the image within the home-img container */
@@ -248,6 +249,10 @@ figure img:hover {
     color: #7c7474;
 }
 
+/* box shadow for proj imgs */
+.project img {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
 
 /* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
 @media screen and (max-width: 600px) {
